--- a/styles/styles.css
+++ b/styles/styles.css
@@ -15,7 +15,7 @@ body {
     display: inline-flex;
     width: 100%;
     top: 0;
-    min-height: 10vh;
+    max-height: 10vh;
     justify-content: space-between;
     align-items: center;
 }
@@ -24,7 +24,8 @@ body {
     height: 100%;
     width: 100%;
     background-color: rgb(26, 26, 26);
-    min-height: 10vh;
+    height: 9vh;
+    max-height: 10vh;
 }
 
 .ulNav {
@@ -33,8 +34,10 @@ body {
     width: 100%;
     justify-content: space-between;
     padding: 0;
-    margin: 2vh 5vw;
+    margin: 1vh 5vw;
     align-items: center;
+    list-style: none;
+    max-height: 10vh;
 }
 
 .headerLogo img {
@@ -47,7 +50,7 @@ a {
 
 .main {
     display: flex;
-    height: 90vh;
+    height: 91vh;
     background: url(../img/apartmentsBlured.png) no-repeat;
     background-size: cover;
     background-position: top 0px center;
